--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
-{
-* font-weight: 400;
-                    }
+
+*{
+    font-weight: 400;
+}
+
 body{
     color: var(--branco);
     background-color: var(--cor-de-fundo);
@@ -26,12 +28,32 @@ body{
 .titulo-secundario{
     font-size: 24px;
 }
-.conteudo-titulo{ 
+
+.conteudo-titulo{
     text-align: center;
     margin-top: 80px;
 }
-.titulo-secundario{
-    font-size: 24px;
-    font-weight: 400;
+
+.conteudo-senha{
+    margin-top: 80px; 
+    background: var(--fundo-senha);
+    padding: 24px;
+    border-bottom: 6px solid var(--borda);
 }
 
+#campo-senha{
+    background-color: var(--fundo-senha);
+    border: none;
+    color: var(--branco);
+    font-family: var(--roboto-mono);
+    font-size: 40px;
+}
+
+#campo-senha:focus{
+    outline: none;
+}
+
+.conteudo{
+    max-width: 1200px;
+    margin: 0 auto;
+}
